# news-analyst-agent

./: .env.example  .gitignore  about.md  feedback.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: daily.yml  deploy.yml
app/: build.py  config.py  onboard.py  pipeline.py  providers.py
prompts/: base_role.md  mode_primer.md  mode_update.md  onboarding_agent.md  synthesis_mode_primer.md  synthesis_mode_update.md  synthesis_role.md
samples/: gemini-iran-initial.md
topics/iran/: topic_brief.md
topics/iran/primers/: claude.md  gpt.md
topics/iran/updates/2026-03-15/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-16/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-17/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-18/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-19/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-20/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-23/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-24/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-25/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-26/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-27/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-30/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-03-31/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-04-01/: claude.md  gpt.md  synthesis.md
topics/iran/updates/2026-04-02/: claude.md  gpt.md  synthesis.md
(+75 files in other folders)
