[project]
name = "news-analyst-agent"
version = "0.1.0"
description = "AI-powered news analysis with editorial control"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"
